fixed overflow, fixed clamp (again)

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@
     margin: 0;
 }
 
+body {
+    overflow: hidden;
+}
+
 #canvas {
-  border: 1px solid #000;
-  overflow: hidden;
+    border: 1px solid #000;
 }
